# asushiro

./: .gitignore
.ipynb_checkpoints/: 1 张量，计算图-checkpoint.ipynb  2 数据处理,模型搭建-checkpoint.ipynb  5 模型保存加载，微调，以及常见问题-checkpoint.ipynb  pytorch-checkpoint.ipynb  test-checkpoint.ipynb
Transformer/: transformer.ipynb
cppInLinux/: README.md
cppInLinux/Thread/: CMakeLists.txt  README.md  readme.md
cppInLinux/Thread/src/: 1firstBuild.cpp  2Exception.cpp  3dataShare.cpp  4callOnce.cpp  5conditionVariable.cpp  6threadPool.cpp  7asyncPromise.cpp  8atomic.cpp  dataShare.cpp
pytorch/: 1 张量，计算图.ipynb  2 数据处理,模型搭建.ipynb  3 可视化tensorboard与hook与cam.ipynb  4 正则化.ipynb
pytorch/runs/Oct23_10-22-31_AltriasExcailburtest_your_comment/: events.out.tfevents.1729650151.AltriasExcailbur.10444.0_test_your_filename_suffix
pytorch/runs/Oct25_16-33-00_AltriasExcailbur_test_tensorboard/: events.out.tfevents.1729845180.AltriasExcailbur.13268.012345678
pytorch/runs/Oct25_18-40-34_AltriasExcailbur_test_tensorboard/: events.out.tfevents.1729852834.AltriasExcailbur.13268.112345678
